--- a/styles/style.css
+++ b/styles/style.css
@@ -19,6 +19,13 @@ body{
 
 /*HEADER*/
 
+header{
+    width: 100%;
+    margin-bottom: 65px;
+    color: white;
+    text-align: center;
+}
+
 nav{
     background-color: #222A2F;
     padding: 10px 22px;
@@ -49,9 +56,6 @@ nav ul{
     align-items: center;
 }
 
-nav ul li{
-}
-
 nav ul li:last-child{
     background-color: #2DC769;
     border-radius: 10px;
@@ -62,6 +66,20 @@ nav ul a{
     text-decoration: none;
     color: white;
 }
+
+div#titulo{
+    background-image: url("../images/mainbanner.png");
+    background-repeat: no-repeat;
+    background-size: center center;
+    background-size: cover;
+    background-attachment: fixed;
+
+    height: 520px;
+    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.401);
+
+    padding: 200px 0;
+}
+
 
 
 /*MAIN*/
