--- a/styles/style.css
+++ b/styles/style.css
@@ -80,13 +80,68 @@ div#titulo{
     padding: 200px 0;
 }
 
+div#titulo h1, div#titulo p{
+    text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.677);
+}
+
+div#titulo h1{
+    font-size: 2.5em;
+}
+
+div#titulo p{
+    font-weight: 500;
+    font-size: 17px;
+}
+
 
 
 /*MAIN*/
 
 main{
     width: 90%;
+    margin: auto;
 }
+
+article#qualidades{
+    text-align: center;
+    
+    display: flex;
+    flex-flow: row wrap;
+    justify-items: center;
+    align-items: center;
+    gap: 40px;
+}
+
+article#qualidades section#seguranca, section#velocidade, section#suporte{
+    flex: 1 1 300px;
+}
+
+article#qualidades span.material-icons{
+    font-size: 85px;
+    margin-bottom: 20px;
+}
+
+article#qualidades section#seguranca span.material-icons{
+    color: #2DC769;
+}
+
+article#qualidades section#velocidade span.material-icons{
+    color: #EE3E26;
+}
+
+article#qualidades section#suporte span.material-icons{
+    color: #EB8F27;
+}
+
+article#qualidades h3{
+    margin-bottom: 20px;
+    font-size: 1.3em;
+}
+
+article#qualidades p{
+    margin-bottom: 15px;
+}
+
 
 
 
