--- a/styles/style.css
+++ b/styles/style.css
@@ -10,10 +10,6 @@ html, body{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-body{
-/*  width: 100vw;
-    height: 100vh;*/
-}
 
 
 
@@ -85,13 +81,14 @@ div#titulo h1, div#titulo p{
 }
 
 div#titulo h1{
-    font-size: 2.5em;
+    font-size: 3.8em;
 }
 
 div#titulo p{
     font-weight: 500;
     font-size: 17px;
 }
+
 
 
 
@@ -102,6 +99,8 @@ main{
     margin: auto;
 }
 
+
+/*QUALIDADES*/
 article#qualidades{
     text-align: center;
     
@@ -112,7 +111,7 @@ article#qualidades{
     gap: 40px;
 }
 
-article#qualidades section#seguranca, section#velocidade, section#suporte{
+article#qualidades section{
     flex: 1 1 300px;
 }
 
@@ -143,5 +142,98 @@ article#qualidades p{
 }
 
 
+/*PLANOS*/
+article#planos{
+    margin: 65px 0;
+}
 
+article#planos h2, article#planos p{
+    text-align: center;
+    margin-bottom: 20px;
+}
 
+article#planos h2{
+    font-size: 1.8em;
+}
+
+article#planos p{
+    margin-bottom: 40px;
+}
+
+article#planos div#bloco-planos{
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 40px;
+}
+
+article#planos div#bloco-planos section{
+    flex: 1 1 250px;
+}
+
+article#planos div#bloco-planos section p{
+    margin-bottom: 0;
+    padding: 54px 0;
+    
+    width: 125px;
+    height: 130px;
+
+    font-size: 18px;
+    text-align: center;
+    color: white;
+
+    background-color: #2DC769;
+    border-radius: 100px;
+
+    margin: auto;
+    margin-bottom: -40px;
+
+    position: relative;
+    z-index: 2;
+}
+
+article#planos div#bloco-planos section h4{
+    background-color: #202A33;
+    
+    padding: 50px 0 15px 0;
+
+    color: white;
+    font-size: 18px;
+    text-transform: uppercase;
+    text-align: center;
+}
+
+article#planos div#bloco-planos section ul{
+    background-color: #E6E8EA;
+    
+    padding: 0 10px;
+    
+    text-align: center;
+    list-style: none;
+}
+
+article#planos div#bloco-planos section li{
+     padding: 18px;
+     border-bottom: 1px solid white;
+}
+
+article#planos div#bloco-planos section li:nth-child(5){
+    border-bottom: none;
+}
+
+article#planos div#bloco-planos section a{
+    display: block;
+
+    background-color: #2DC769;
+    padding: 20px;
+    
+    color: white;
+    font-size: 20px;
+    text-align: center;
+    text-decoration: none;
+}
+
+article#planos div#bloco-planos section:nth-child(3) p, article#planos div#bloco-planos section:nth-child(3) a{
+    background-color: #F35D57;
+}
