--- a/styles/style.css
+++ b/styles/style.css
@@ -95,7 +95,7 @@ div#titulo p{
 /*MAIN*/
 
 main{
-    width: 90%;
+    /*width: 90%;*/
     margin: auto;
 }
 
@@ -103,6 +103,7 @@ main{
 /*QUALIDADES*/
 article#qualidades{
     text-align: center;
+    margin: 80px 50px;
     
     display: flex;
     flex-flow: row wrap;
@@ -144,7 +145,7 @@ article#qualidades p{
 
 /*PLANOS*/
 article#planos{
-    margin: 65px 0;
+    margin: 100px 50px;
 }
 
 article#planos h2, article#planos p{
@@ -236,4 +237,15 @@ article#planos div#bloco-planos section a{
 
 article#planos div#bloco-planos section:nth-child(3) p, article#planos div#bloco-planos section:nth-child(3) a{
     background-color: #F35D57;
+}
+
+
+/*BUSCAR DOMÍNIOS*/
+article#busca-dominio{
+    background-color: #33444C;
+    width: 100%;
+    padding: 50px;
+
+    text-align: center;
+    color: white;
 }
