--- a/styles/style.css
+++ b/styles/style.css
@@ -48,14 +48,27 @@ nav ul{
     text-transform: uppercase;
 
     display: flex;
-    gap: 15px;
+    gap: 5px;
     align-items: center;
 }
 
-nav ul li:last-child{
-    background-color: #2DC769;
+nav ul li{
+    padding: 10px 12px;
     border-radius: 10px;
+}
+
+nav ul li:hover{
+    background-color: #394147;
+}
+
+nav ul li:last-child{
+    display: inline;
+    background-color: #2DC769;
     padding: 10px 15px;
+}
+
+nav ul li:last-child:hover{
+    background-color: #37f47f;
 }
 
 nav ul a{
@@ -99,6 +112,10 @@ main{
     margin: auto;
 }
 
+main p{
+    color: #5e5e5f;
+}
+
 
 /*QUALIDADES*/
 article#qualidades{
@@ -140,6 +157,7 @@ article#qualidades h3{
 
 article#qualidades p{
     margin-bottom: 15px;
+    font-size: 18px;
 }
 
 
@@ -159,6 +177,7 @@ article#planos h2{
 
 article#planos p{
     margin-bottom: 40px;
+    font-size: 18px;
 }
 
 article#planos div#bloco-planos{
@@ -254,35 +273,117 @@ article#busca-dominio{
 article#busca-dominio h2{
     font-size: 2.7em;
     line-height: 45px;
+    
     margin-bottom: 15px;
 }
 
 article#busca-dominio p{
     font-size: 22px;
+    color: white;
 }
 
-form{
+article#busca-dominio form{
     margin-top: 40px;
 }
 
-form input[type="text"]{
+article#busca-dominio form input[type="text"]{
     width: 100%;
     padding: 20px;
+    margin-bottom: 15px;
+    
     border: 1px solid #33444C;
     border-radius: 5px;
-    margin-bottom: 15px;
 }
 
-form input::placeholder{
+article#busca-dominio form input::placeholder{
     font-size: 18px;
 }
 
-form input[type="submit"]{
+article#busca-dominio form input[type="submit"]{
     width: 100%;
     padding: 20px;
     background-color: #2DC769;
+    
     border: 1px solid #2DC769;
     border-radius: 5px;
+    
     color: white;
     font-size: 18px;
+}
+
+article#busca-dominio form input[type="submit"]:hover{
+    background-color: #37f47f;
+    cursor: pointer;
+}
+
+
+/*ENTRAR EM CONTATO*/
+article#contato{
+    margin: 70px;
+    text-align: center;
+}
+
+article#contato h2{
+    font-size: 2em;
+    margin-bottom: 20px;
+}
+
+article#contato p{
+    font-size: 18px;
+    margin-bottom: 20px;
+}
+
+
+article#contato form{
+    margin: auto;
+}
+
+article#contato input{
+    width: 350px;
+}
+
+article#contato input{
+    padding: 15px;
+    margin-bottom: 10px;
+
+    border-radius: 5px;
+    border: 1px solid gray;
+}
+
+article#contato input::placeholder{
+    font-size: 16px;
+}
+
+article#contato textarea{
+    width: 348px;
+    height: 200px;
+
+    margin-bottom: 8px;
+    padding: 15px;
+
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 16px;
+}
+
+article#contato form input[type="submit"]{
+    background-color: #2DC769;
+    border: 1px solid #2DC769;
+
+    font-size: 16px;
+    color: white;
+}
+
+article#contato form input[type="submit"]:hover{
+    background-color: #37f47f;
+    cursor: pointer;
+}
+
+
+
+
+/*FOOTER*/
+footer{
+    text-align: center;
+    font-size: 18px;
+    padding: 20px;
 }
