--- a/styles/style.css
+++ b/styles/style.css
@@ -17,7 +17,7 @@ html, body{
 
 header{
     width: 100%;
-    margin-bottom: 65px;
+    margin-bottom: 100px;
     color: white;
     text-align: center;
 }
@@ -68,7 +68,7 @@ nav ul li:last-child{
 }
 
 nav ul li:last-child:hover{
-    background-color: #37f47f;
+    background-color: #32df74;
 }
 
 nav ul a{
@@ -263,8 +263,8 @@ article#planos div#bloco-planos section:nth-child(3) p, article#planos div#bloco
 article#busca-dominio{
     background-color: #33444C;
     width: 100%;
-    height: 500px;
-    padding: 75px 60px;
+    height: 600px;
+    padding: 110px 60px;
 
     text-align: center;
     color: white;
@@ -312,7 +312,7 @@ article#busca-dominio form input[type="submit"]{
 }
 
 article#busca-dominio form input[type="submit"]:hover{
-    background-color: #37f47f;
+    background-color: #32df74;
     cursor: pointer;
 }
 
@@ -374,7 +374,7 @@ article#contato form input[type="submit"]{
 }
 
 article#contato form input[type="submit"]:hover{
-    background-color: #37f47f;
+    background-color: #32df74;
     cursor: pointer;
 }
 
